--- a/BestarProject/ShoppingMall/res/layout/fragment_home.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_home.xml
@@ -227,6 +227,7 @@
                                 android:layout_height="150dp"
                                 android:background="#fff"
                                 android:orientation="vertical"
+                                android:id="@+id/shujuLayout"
                                 android:padding="10dp">
 
                                 <TextView
