--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_more_user_info.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_more_user_info.xml
@@ -42,6 +42,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:textColor="@color/app_theme_color"
                     android:background="@drawable/selector_edit_info_btn" />
             </RelativeLayout>
 
