--- a/BestarProject/ShoppingMall/src/main/res/layout/item_collect_list.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/item_collect_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/section_item_selector"
     android:gravity="center_vertical"
     android:orientation="horizontal"
@@ -22,7 +22,7 @@
     <LinearLayout
         android:id="@+id/contentLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:gravity="center_vertical"
         android:orientation="vertical">
