--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_agency_pay.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_agency_pay.xml
@@ -19,7 +19,7 @@
             android:layout_centerVertical="true"
             android:background="@null"
             android:gravity="center"
-            android:src="@drawable/back" />
+            android:src="@drawable/selector_back_btn" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
