--- a/BestarProject/ShoppingMall/src/main/res/layout/layout_hot_search.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/layout_hot_search.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#00000000"
     android:clickable="true"
     android:orientation="vertical">
 
-    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:background="#fff"
         android:id="@+id/gridLayout"
-        android:numColumns="4"
+        android:columnCount="4"
+        android:rowCount="2"
         >
-
-    </GridView>
+    </GridLayout>
 </RelativeLayout>
